# snake

./: CMakeLists.txt  Readme.md  Setup.bat
arcade/: CMakeLists.txt
arcade/include/: Arcade.h  Button.h  Food.h  GameConstants.h  GameObject.h  GameScene.h  Obstacle.h  Snake.h  SnakeApplication.h  SnakeNode.h
arcade/src/: Button.cpp  Food.cpp  GameObject.cpp  GameScene.cpp  Obstacle.cpp  Snake.cpp  SnakeApplication.cpp  SnakeNode.cpp
core/: CMakeLists.txt  PlatformEntry.cpp  pch.h
core/include/: Application.h  ApplicationBase.h  ArcadeCore.h  Board.h  Color.h  IInput.h  ILifeCycle.h  IPainter.h  IRenderer.h  IView.h  NonCopyable.h  Rectangle.h  SDLInput.h  SDLPainter.h  SDLRenderer.h  SDLView.h  Timer.h  Vector2.h
core/include/gui/: Widget.h  WidgetContainer.h  WidgetManager.h
core/src/: Application.cpp  ApplicationBase.cpp  Color.cpp  SDLInput.cpp  SDLPainter.cpp  SDLPrimitives.cpp  SDLRenderer.cpp  SDLView.cpp  Timer.cpp  Vector2.cpp  imgui_sdl.cpp
core/src/gui/: WidgetContainer.cpp  WidgetManager.cpp
scripts/: CopyFiles.py
